# name: test_basic_building
  '''
  query {
    result: findUniqueUser
    (
      where: {
        id: "1"
      }
    )
    {
      id
      name
      email
      created_at
    }
  }
  '''
# ---
# name: test_basic_building.1
  '''
  mutation {
    result: queryRaw
    (
      where: {
        id: "1"
      }
    )
  }
  '''
# ---
# name: test_custom_serialization
  '''
  query {
    result: findUniquePost
    (
      where: {
        title: 1
      }
    )
    {
      id
      created_at
      updated_at
      title
      published
      views
      desc
      author_id
    }
  }
  '''
# ---
# name: test_datetime_serialization_tz_aware
  '''
  query {
    result: findUniquePost
    (
      where: {
        created_at: "1985-10-25T01:02:01+00:00"
      }
    )
    {
      id
      created_at
      updated_at
      title
      published
      views
      desc
      author_id
    }
  }
  '''
# ---
# name: test_datetime_serialization_tz_unaware
  '''
  query {
    result: findUniquePost
    (
      where: {
        created_at: "1985-10-26T01:01:01+00:00"
      }
    )
    {
      id
      created_at
      updated_at
      title
      published
      views
      desc
      author_id
    }
  }
  '''
# ---
# name: test_include_with_arguments
  '''
  query {
    result: findUniqueUser
    (
      where: {
        id: 1
      }
    )
    {
      id
      name
      email
      created_at
      posts(
        where: {
          id: 1
        }
      )
      {
        id
        created_at
        updated_at
        title
        published
        views
        desc
        author_id
      }
    }
  }
  '''
# ---
# name: test_raw_queries
  '''
  mutation {
    result: queryRaw
    (
      query: "SELECT * FROM User where id = $1"
      parameters: "[\"1263526\"]"
    )
  }
  '''
# ---
# name: test_select
  '''
  query {
    result: findFirstPost
    (
      where: {
        title: "Foo"
      }
    )
    {
      published
    }
  }
  '''
# ---
# name: test_select.1
  '''
  query {
    result: findFirstPost
    {
      published
      author {
        name
      }
    }
  }
  '''
# ---
# name: test_select_non_prisma_model_basemodel
  '''
  query {
    result: findFirstPost
    (
      where: {
        title: "Foo"
      }
    )
    {
      published
      my_json_blob
    }
  }
  '''
# ---
# name: test_unicode
  '''
  query {
    result: findUniqueUser
    (
      where: {
        name: "❤"
      }
    )
    {
      id
      name
      email
      created_at
    }
  }
  '''
# ---
